# BiliBC

./: .gitignore  CMakeLists.txt  CMakePresets.json  app.manifest  vcpkg.json
.github/workflows/: build.yml
assets/fonts/: README.txt
docs/: brainstorm.md  plan.md
shaders/: blur_down.frag  blur_up.frag  composite.frag  danmaku.frag  danmaku.vert  quad.frag  quad.vert  ui.frag
src/: blur.c  blur.h  config.c  config.h  danmaku.c  danmaku.h  danmaku_parser.c  danmaku_parser.h  i18n.c  i18n.h  main.c  player.c  player.h  shader.c  shader.h  stb_image_write.h  text.c  text.h  text_renderer.c  text_renderer.h  ui.c  ui.h  utf8.c  utf8.h
src/platform/: platform_win32.c
